test/files/neg/t9041.check
t9041.scala:11: error: implicit error;
!I cellSetter: CellSetter[BigDecimal]
      def setCell(cell: Cell, data: math.BigDecimal): Unit = { cell.setCellValue(data) }
                                                                                ^
1 error
